--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -3,7 +3,7 @@
 @font-face {
     font-display: swap;
     /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Josefin Sans';
+    font-family: 'Josefin Sans', sans-serif;
     font-style: normal;
     font-weight: 400;
     src: url('../fonts/josefin-sans-v32-latin-regular.woff2') format('woff2');
