--- a/styles/style.css
+++ b/styles/style.css
@@ -10,15 +10,26 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: var(--main-font-family);
+    color: var(--text-gray);
 }
 
 body {
-    font-family: var(--main-font-family);
-    color: var(--text-gray);
+    /* font-family: var(--main-font-family);
+    color: var(--text-gray); */
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+}
+
+ul,
+li {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
 }
 
 .container {
@@ -26,4 +37,54 @@ body {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
+}
+
+
+/* header styles */
+
+.header .header--container {
+    display: flex;
+    justify-content: space-between;
+    padding: 16px 0;
+    align-items: center;
+}
+
+.header .logo img {
+    width: 172px;
+}
+
+.header .header--nav-items {
+    display: flex;
+    gap: 32px;
+    align-items: center;
+}
+
+.header .header--nav-item {
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 20px;
+}
+
+.header .header--nav-item:hover {
+    color: #152aa6;
+}
+
+.header li:last-child {
+    padding: 10px 22px 10px 23px;
+    background-color: #C13512;
+}
+
+.header li:last-child:hover {
+    background-color: #f40b0b;
+}
+
+.header .header--nav-items .btn {
+    color: #FFF;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 20px;
+}
+
+.header .header--nav-items .btn:hover {
+    /* background-color: #7b1e07; */
 }
