--- a/styles/style.css
+++ b/styles/style.css
@@ -142,4 +142,67 @@ a {
 .hero img {
     width: 825px;
     margin-left: 150px;
+    margin-bottom: 90.5px;
+}
+
+
+/* main styles */
+
+.main .work {
+    display: flex;
+    gap: 30px;
+    margin-bottom: 64px;
+}
+
+.main .work--title {
+    margin-top: 42px;
+    color: var(--title-color);
+    font-family: var(--second-font-family);
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 120%;
+}
+
+.main .work-desc {
+    margin-top: 30px;
+    color: #525560;
+    font-family: Josefin Sans;
+    line-height: 130%;
+}
+
+.main .desc {
+    margin-bottom: 33px;
+}
+
+.main .work-info-img {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 19px;
+}
+
+.main .work-info-img a {
+    display: flex;
+    align-items: center;
+    column-gap: 30px;
+}
+
+.main .working-info span {
+    color: var(--text-gray);
+    font-feature-settings: 'liga' off;
+    font-family: Libre Baskerville;
+    font-size: 20px;
+    line-height: 32px;
+    margin-right: 41px;
+}
+
+.main .working-img img {
+    margin-bottom: 32px;
+}
+
+.main .working-img img:nth-child(2) {
+    margin-right: 28px;
+}
+
+.main .working-img img:nth-child(3) {
+    border-radius: 12px;
 }
